--- a/ManveetsBookStore/Views/Shared/_Layout.cshtml
+++ b/ManveetsBookStore/Views/Shared/_Layout.cshtml
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ManveetsBookStore</title>
-    <!--<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />-->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
@@ -39,7 +38,6 @@
                                 <a class="dropdown-item" href="#">Something else here</a>
                             </div>
                         </li>
-                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -54,7 +52,7 @@
 
     <footer class="border-top footer text-white-50 bg-primary">
         <div class="container">
-            &copy; 2022 - ManveetsBookStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - ManveetsBookStore
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
