--- a/ManveetsBookStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/ManveetsBookStore/Areas/Customer/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                             <p>List Price: <strike><b class="">$ @product.ListPrice.ToString("0.00")</b></strike></p>
                         </div>
                         <div style="padding-left:5px;">
-                            <p style="color:dimgray">As low as: <b class="">$@product.Price100.ToString("0.00")</b></p>
+                            <p style="color:maroon">As low as: <b class="">$@product.Price100.ToString("0.00")</b></p>
                         </div>
                     </div>
                     <div>
